--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "encryption-envelope-js",
-  "version": "1.1.6",
-  "description": "Javascript Wire Message Format written in Typescript",
+  "version": "1.2.0",
+  "description": "Crypto helpers for use in DIDComm messaging",
   "contributors": [
     {
       "name": "Daniel Bluhm",
-      "email": "daniel.bluhm@sovrin.org"
+      "email": "dbluhm@pm.me"
     },
     {
       "name": "Joe Genereux",
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/thedolie/wire-message-format-js"
+    "url": "https://github.com/dbluhm/encryption-envelope-js"
   },
   "license": "Apache-2.0",
   "dependencies": {
